[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyatsyn"
authors = [
    {name = "Johnathan G. Lyon", email = "johnathanglyon@gmail.com"}
]
description = "python-based implementation of Analysis-Synthesis-Transformation (ATS) spectral music system"
readme = "README.md"
version = "1.0.0"
keywords = ["spectral", "audio", "dsp", "synthesis", "music", "sound", "analysis", "ats"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "soundfile",
]

[tool.setuptools.packages.find]
exclude = ['docs*']

[project.scripts]
pyatsyn-atsa = "pyatsyn.atsa.tracker:tracker_CLI"
pyatsyn-synth = "pyatsyn.ats_synth:synth_CLI"
pyatsyn-info = "pyatsyn.ats_io:ats_info_CLI"

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme"]

[project.urls]
"Homepage" = "https://github.com/boxofbox/pyatsyn"
"Bug Tracker" = "https://github.com/boxofbox/pyatsyn/issues"
"Documentation" = "https://pyatsyn.readthedocs.io"
